updated styling to match design

--- a/project-2/index.html
+++ b/project-2/index.html
@@ -35,22 +35,22 @@
     <div class="container-fluid">
       <div class="container text-center py-3">
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 mb-5">
             <div class="p-5 h-100" style="background-color:#f2f2f2;">
               <h3>Build credit<br /> as you go</h3>
               <img src="images/icon_1.png" alt="" class="py-5">
               <p>We designed our loan process to fit your needs and help you grow. As you build credit with Branch, you unlock larger loan amounts.</p>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 mb-5">
             <div class="p-5 h-100" style="background-color:#f2f2f2;">
               <h3>Unlimited free transfers <br/> from your wallet</h3>
               <img src="images/icon_5.png" alt="" class="py-5">
               <p>With the Branch Wallet, you can send and receive payments with your friends and family, at no cost.</p>
             </div>
           </div>
-          <div class="col-lg-4 h-100">
-            <div class="p-5" style="background-color:#f2f2f2;">
+          <div class="col-lg-4 mb-5">
+            <div class="p-5 h-100" style="background-color:#f2f2f2;">
               <h3>Pay bills instantly <br /> (Launching soon)</h3>
               <img src="images/icon_6.png" alt="" class="py-5">
               <p>Easily pay bills and purchase airtime and data bundles direct from your Branch Wallet. Transact on the go and enjoy instant purchases.</p>
@@ -62,11 +62,11 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-6 py-5">
+        <div class="col-lg-6 py-5 position-relative">
           <img src="images/plants.png" class="img-fluid">
         </div>
         <div class="col-lg-6">
-          <div id="containerCarousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
+          <div id="containerCarousel" class="carousel carousel-dark" data-bs-ride="carousel">
             <div class="carousel-indicators position-relative">
               <a type="button" data-bs-target="#containerCarousel" data-bs-slide-to="0" class="fs-4 active" aria-current="true" aria-label="Slide 1"></a>
               <a type="button" data-bs-target="#containerCarousel" data-bs-slide-to="1" class="fs-4" aria-label="Slide 2"></a>
@@ -76,6 +76,9 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="container">
+                  <div class="carousel-image">
+                    <h1 class="position-absolute">Left image over the plant image</h1>
+                  </div>
                   <div class="carousel-caption text-center">
                     <h1>Download the Branch app and create your account</h1>
                   </div>
@@ -118,30 +121,34 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid" id="section-4">
       <div class="container py-5">
+        <div class="text-center pb-3 text-light">
+          <h2 class="h1">Privacy is paramount</h2>
+          <p class="fs-5">At Branch, the privacy and security of our customers and their is our top priority.</p>
+        </div>
         <div class="row">
-          <div class="col-lg-4">
-            <div class="p-5 h-100" style="background-color:#f2f2f2;">
-              <img src="images/privacy_icon_1.png" class="pb-2">
-              <h3 class="pb-2">Security</h3>
-              <p class="pb-2">All the data we use is encrypted and protected.</p>
-              <p class="pb-2">We have strict policies in place that ensure our methods are properly communicated and customer data is always secure.</p>
+          <div class="col-lg-4 mb-5">
+            <div class="p-4 h-100" style="background-color:#f2f2f2;">
+              <img src="images/privacy_icon_1.png" class="py-3">
+              <h3 class="pb-3">Security</h3>
+              <p class="pb-3">All the data we use is encrypted and protected.</p>
+              <p>We have strict policies in place that ensure our methods are properly communicated and customer data is always secure.</p>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="p-5 h-100" style="background-color:#f2f2f2;">
-              <img src="images/privacy_icon_2.png" class="pb-2">
-              <h3 class="pb-2">Data privacy</h3>
-              <p class="pb-2">We never sell customer data or share customer contacts with third parties.</p>
+          <div class="col-lg-4 mb-5">
+            <div class="p-4 h-100" style="background-color:#f2f2f2;">
+              <img src="images/privacy_icon_2.png" class="py-3">
+              <h3 class="pb-3">Data privacy</h3>
+              <p>We never sell customer data or share customer contacts with third parties.</p>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="p-5 h-100" style="background-color:#f2f2f2;">
-              <img src="images/privacy_icon_3.png" class="pb-2">
-              <h3 class="pb-2">Ethical collections</h3>
-              <p class="pb-2">We do not condone any aggressive debt collection practices, including debt shaming.</p>
-              <p class="pb-2">If you experience any form of harassment, please report the issue to us immediately via in-app chat.</p>
+          <div class="col-lg-4 mb-5">
+            <div class="p-4 h-100" style="background-color:#f2f2f2;">
+              <img src="images/privacy_icon_3.png" class="py-3">
+              <h3 class="pb-3">Ethical collections</h3>
+              <p class="pb-3">We do not condone any aggressive debt collection practices, including debt shaming.</p>
+              <p>If you experience any form of harassment, please report the issue to us immediately via in-app chat.</p>
             </div>
           </div>
         </div>
@@ -151,22 +158,22 @@
     <div class="container-fluid">
       <div class="container py-5">
         <div class="row py-5">
-          <div class="col-lg-7">
+          <div class="col-lg-6">
             <div class="row">
-              <div class="col-lg-6">
-                <div class="mb-4">
-                  <img src="images/tile_1-for-video-writing.jpg">
-                </div>
-                <div>
-                  <img src="images/tile_2-tailoring.jpg">
+              <div class="col-md-6">
+                <div class="mb-4 d-sm-none d-md-block">
+                  <img class="img-fluid" src="images/tile_1-for-video-writing.jpg">
+                </div class="mb-4">
+                <div class="mb-4 d-sm-none d-md-block">
+                  <img class="img-fluid" src="images/tile_2-tailoring.jpg">
                 </div>
               </div>
-              <div class="col-lg-6">
-                <img src="images/tile_3-cloth-business.jpg">
+              <div class="col-md-6 mb-4">
+                <img class="img-fluid" src="images/tile_3-cloth-business.jpg">
               </div>
             </div>
           </div>
-          <div class="col-lg-5">
+          <div class="col-lg-6">
             <div class="px-5">
               <h3 class="h1 mb-5">Real Branch Stories</h3>
               <p class="fs-4">“Since I joined Branch my life has changed and I'm able to my manage my business better. I use my loans to pay my workers and buy construction materials. I'm now at the Ksh 50,000 loan limit!”</p>
@@ -178,41 +185,39 @@
       </div>
     </div>
 
-    <footer class="container-fluid text-center text-light" style="background-color: rgb(25, 53, 94);">
+    <footer class="container-fluid text-light" style="background-color: rgb(25, 53, 94);">
       <div class="container py-5">
         <div class="row py-5">
           <div class="col-lg-6">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-sm-6 mb-4">
                 <h3 class="h3">Curious about Branch?</h3>
-                  <a href="" class="link-light">About</a>
-                  <a href="" class="link-light">How it works</a>
-                  <a href="" class="link-light">In the news</a>
+                  <a href="" class="link-light me-2">About</a>
+                  <a href="" class="link-light me-2">How it works</a>
+                  <a href="" class="link-light me-2">In the news</a>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-6 mb-4">
                 <h3 class="h3">Legal</h3>
-                <a href="" class="link-light">Terms of use</a>
-                <a href="" class="link-light">Privacy policy</a> 
+                <a href="" class="link-light me-2">Terms of use</a>
+                <a href="" class="link-light me-2">Privacy policy</a> 
 
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-lg-3 mb-4">
             <div>
               <h3 class="h3">Download</h3>
-
+              <img src="images/android-icon.png" alt="android icon" width="25">
             </div>
           </div>
           <div class="col-lg-3">
             <div>
               <h3 class="h3">Contact Information</h3>
-
-  10th Floor, Reliable Towers,
-  11 Mogotio Road, Off Chiromo Lane,
-  Westlands, Nairobi.
-
-  +254 711 995555
+              <p class=" mb-0">10th Floor, Reliable Towers,</p>
+              <p class=" mb-0">11 Mogotio Road, Off Chiromo Lane,</p>
+              <p>Westlands, Nairobi.</p>
+              <p>+254 711 995555</p>
             </div>
         </div>
       </div>
@@ -220,8 +225,15 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script>
-      var containerCarousel = document.querySelector('#containerCarousel')
-      var carousel = new bootstrap.Carousel(containerCarousel)
+      var containerCarousel = document.querySelector('#containerCarousel');
+      var imageCarousel = document.getElementById('imageCarousel');
+      var carousel = new bootstrap.Carousel(containerCarousel);
+      
+      containerCarousel.addEventListener('slide.bs.carousel', function () {
+        console.log(event)
+      })
+
+
     </script>
     </body>
 
